fixed anchors not scrolling properly on mobile

--- a/client/head/markup.css
+++ b/client/head/markup.css
@@ -66,6 +66,16 @@ li{
   text-decoration: underline;
   -webkit-tap-highlight-color: rgba(255, 0, 0, .25);
 }
+.markup-anchor{
+  pointer-events: none;
+  text-decoration: none;
+  position: relative;
+}
+@media(max-aspect-ratio: <<<yield consts.portrait>>>){
+  .markup-anchor{
+    top: calc(var(--smart-unit) * -10);
+  }
+}
 .markup-link:hover{
   color: var(--title);
   /*animation-name: link-hover;
